--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vite-project",
   "homepage": "https://Petch-Chanita.github.io/cafe-website",
-
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,14 +16,18 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.3",
+    "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
+    "react-tooltip": "^5.28.0",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/node": "^22.13.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
