update call service

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL=http://localhost:8080/api
+VITE_API_BASE_URL=https://cafeweb-backend.onrender.com/api
+# http://localhost:8080/api
+VITE_APP_CAFE_ID=918ed363-37c7-4476-9e66-bcfc544a3be4
