--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@heroui/react": "^2.7.2",
+    "@heroui/react": "^2.7.8",
+    "@heroui/theme": "^2.4.15",
+    "@heroui/use-infinite-scroll": "^2.2.9",
+    "@react-stately/data": "^3.12.3",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
