--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# VITE_API_BASE_URL=http://localhost:8080/api
-VITE_API_BASE_URL=https://cafeweb-server-bb3e0a5e489a.herokuapp.com/api
+VITE_API_BASE_URL=http://localhost:8080/api
+# VITE_API_BASE_URL=https://cafeweb-server-bb3e0a5e489a.herokuapp.com/api
 VITE_APP_CAFE_ID=748d7ec2-1591-4c83-9e31-427e09855974
 
