--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@heroui/react": "^2.7.8",
+    "@heroui/react": "^2.8.0-beta.2",
     "@heroui/theme": "^2.4.15",
     "@heroui/use-infinite-scroll": "^2.2.9",
     "@react-stately/data": "^3.12.3",
-    "@tailwindcss/vite": "^4.0.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
     "moment-timezone": "^0.5.47",
@@ -32,15 +33,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^22.13.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
+    "postcss": "^8.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
