--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
+    "jwt-decode": "^4.0.0",
     "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.1",
     "react-tooltip": "^5.28.0",
     "tailwindcss": "^4.0.3"
   },
